working on footer

--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,3 +1,33 @@
-.color-nav{
-    background-color: blueviolet;
+.footer-color{
+    background-color: #27206B;
 }
+
+.card1{
+    background-color: #27206B;
+    color: floralwhite;
+    border-color: #27206B;
+    text-align: left;
+    
+}
+
+.card2{
+    background-color: #27206B;
+    color: floralwhite;
+    border-color: #27206B;
+    text-align: center;
+    
+}
+
+
+
+.card3{
+    background-color: #27206B;
+    color: floralwhite;
+    border-color: #27206B;
+    text-align: left;
+    
+}
+
+
+
+
