added footer images

--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -12,12 +12,20 @@
 
 .card2{
     background-color: #27206B;
-    color: floralwhite;
+    color: #27206B;
     border-color: #27206B;
     text-align: center;
     
 }
 
+
+.cardmid{
+    background-color: #27206B;
+    color: floralwhite;
+    border-color: #27206B;
+    text-align: center;
+    
+}
 
 
 .card3{
