--- a/src/Footer/styles.css
+++ b/src/Footer/styles.css
@@ -2,8 +2,9 @@
 
 /* SOCIAL STUFF */
 .social-container {
+  right: 100%;
   background: #27206B;
-  padding: 15px 5px;
+  padding: 25px 17px;
 }
 a.social {
   margin: 0 1rem;
