--- a/src/About/About.css
+++ b/src/About/About.css
@@ -24,3 +24,9 @@ color: #27206B;
         background-color: #CFCFCF;
     }
     
+
+    .videopart1i{
+ 
+        margin-right: auto;
+        
+    }
