--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -62,5 +62,8 @@ text-align: left;
 .videopart1ii{
  
     margin-right: auto;
+    background-color: #27206B;
+    color: aliceblue;
+    text-align: center;
     
 }
