--- a/src/Robotics/Robotics.css
+++ b/src/Robotics/Robotics.css
@@ -70,5 +70,7 @@
 .videopart1iii{
  
     margin-right: auto;
-    
+    background-color: #27206B;
+    color: aliceblue;
+    text-align: center;
 }
