--- a/src/About/About.css
+++ b/src/About/About.css
@@ -28,5 +28,7 @@ color: #27206B;
     .videopart1i{
  
         margin-right: auto;
-        
+        background-color: #27206B;
+        color: aliceblue;
+        text-align: center;
     }
